<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/backgroungColor">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/title_activity_maps"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/PasswordUser"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EmailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/EmailUSer"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/PasswordSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/RemeberMe"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConnexion"
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/buttonSalmon"
        android:onClick="HomeActivity"
        android:text="Connexion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toTopOf="@+id/ButtSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ButtSignIn"
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:onClick="SignUpActivity"
        android:text="S'inscrire"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/buttonSalmon"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>