<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroungColor">
    tools:context=".Home">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/DeconnexionButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="DeconnectionActivity"
        android:text="Déconnexion"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Bonjour"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="Bonjour "
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/BonjourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Bonjour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/EditAccountButton"
        style="@android:style/ButtonBar"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="@color/buttonSalmon"
        android:onClick="EditAccountActivity"
        android:text="@string/AccountEdit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonText"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BonjourName" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/FindAnnoucesButton"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:onClick="MapCarboardActivty"
        android:text="@string/FindAnnounces"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/buttonSalmon"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditAccountButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/FindDemenagementButton"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="DemenagementListActivity"
        android:text="@string/FindDemenagement"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/buttonSalmon"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindAnnoucesButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/CreateDemenagementButton"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:onClick="DemenagementCreateActivity"
        android:text="@string/CreateDemenagement"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/buttonSalmon"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindDemenagementButton" />

</android.support.constraint.ConstraintLayout>